# kv-store

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  go.mod  main.py  pyproject.toml  run_node.py  run_proxy.py
cmd/kv-node/: main.go
cmd/kv-proxy/: main.go
internal/raft/: http.go  raft.go  raft_test.go  storage.go  types.go
internal/routing/: hashring.go  hashring_test.go
internal/store/: store.go  store_test.go  ttl.go
internal/wal/: wal.go  wal_test.go
kvstore/: __init__.py  config.py
kvstore/proxy/: __init__.py  handler.py  router.py
kvstore/raft/: consts.py  log.py  node.py  raft.py  server.py  types.py
kvstore/store/: __init__.py  store.py  ttl.py
kvstore/wal/: __init__.py  replay.py  wal.py
proto/: kv.proto  raft.proto
proxy/: handler.go  router.go
raft/: raft.go  server.go  types.go
store/: store.go  ttl.go
tests/: proxy_test.py  raft_test.py  store_test.py  wal_test.py
wal/: wal.go
