[project]
name = "kv-store"
version = "0.1.0"
description = "A replicated in-memory key-value store with Raft-based leader election and log replication."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "grpcio>=1.80.0",
    "protobuf<4.0.0",
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
