[project]
name = "kv-store"
version = "0.1.0"
description = "A replicated in-memory key-value store with Raft-based leader election and log replication."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
